--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,14 @@ Flask==2.3.3
 flask-restx==1.1.0
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.0
+gunicorn==21.2.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jsonschema==4.19.1
 jsonschema-specifications==2023.7.1
 Mako==1.2.4
 MarkupSafe==2.1.3
+packaging==23.2
 psycopg2-binary==2.9.9
 pytz==2023.3.post1
 referencing==0.30.2
